# sdltest

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: build_ext_project.cmake  ext_SDL2.cmake
src/: main.cpp
